data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_36.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\91\80\80\80\00\01\03\65\6e\76\09\74"
    "\65\73\74\5f\66\75\6e\63\00\00\03\82\80\80\80\00"
    "\01\00\0a\99\80\80\80\00\01\93\80\80\80\00\00\41"
    "\01\04\7f\10\00\03\40\41\01\0d\00\0b\05\41\00\0b"
    "\0b"
  )
""
)